--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Joe Frazier</title>
 	</head>
 	<body>
 		<nav>
@@ -20,7 +20,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="mailto:jfrazie3@nebrwesleyan.edu">email</a></li>
         		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
