--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Joe Frazier</h1>
+				<p>Student and Athlete at Nebraska Wesleyan University <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:jfrazie3@nebrwesleyan.edu">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/jfrazie3">github.com/jfrazie3</a></li>
 			</ul>
 		</footer>
 	</body>
