--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ li.dropdown {
 		<div class="container">
     		<div class="blurb">
         		<h1>Joe Frazier</h1>
-				<p>Student and Athlete at Nebraska Wesleyan University <a href="/about">Read more about my life...</a></p>
+				<p>Student and Athlete at Nebraska Wesleyan University <a> href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
