--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-			
+		</style>		
 			
 			
 		<title>Joe Frazier</title>
