--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Joe Frazier</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Joe Frazier</h1>
-				<p>Student and Athlete at Nebraska Wesleyan University <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jfrazie3@nebrwesleyan.edu">email</a></li>
-        		<li><a href="https://github.com/jfrazie3">github.com/jfrazie3</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: defalut
+title: Joe Frazier
+---
+<div class="blurb">
+	<h1>Joe Frazier</h1>
+	<p> Student at Nebraska Wesleyan University</p>
+</div><!-- /.blurb -->
