--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
----
-layout: defalut
-title: Joe Frazier
----
-<div class="blurb">
-	<h1>Joe Frazier</h1>
-	<p> Student at Nebraska Wesleyan University</p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Joe Frazier</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/About">About</a></li>
+        		<li><a href="/CV">CV</a></li>
+        		<li><a href="/Resume">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Joe Frazier</h1>
+				<p> Student at Nebraska Wesleyan University <a href="/about">hello</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:jfrazie3@nebrwesleyan.edu">email</a></li>
+        		<li><a href="https://github.com/jfrazie3">github.com/hankquinlan</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
