--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:jfrazie3@nebrwesleyan.edu">email</a></li>
-        		<li><a href="https://github.com/jfrazie3">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/jfrazie3">github.com/jfrazie3</a></li>
 			</ul>
 		</footer>
 	</body>
