--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Joe Frazier</h1>
-				<p> Student at Nebraska Wesleyan University <a href="/about">hello</p>
+				<p> Student at Nebraska Wesleyan University <a href="/about">about</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
