--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/About">About</a></li>
         		<li><a href="/CV">CV</a></li>
-        		<li><a href="/Resume">Blog</a></li>
+        		<li><a href="/Resume">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
