--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Joe Frazier</h1>
+        		<h1>Hi there, I'm the Joe Frazier</h1>
 				<p> Student at Nebraska Wesleyan University <a href="/about">about</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
