--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-  <span class="w3-left w3-padding">SOME NAME</span>
+  <span class="w3-left w3-padding">Joe Frazier</span>
   <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
@@ -84,7 +84,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Joe Frazier</h4>
-      <p>NWU Physics 2019
+      <p>Nebraska Wesleyan University Physics 2019. Physics Club President, Track and Field, Cross country, Cycling Coffee
+      </p>
+      <p>
         Washington University Stl. Computer Science 2020
       </p>
       <p>mail: example@example.com</p>
