--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
     <div class="w3-content" style="max-width:600px">
       <h4 class="w3-center"><b>Contact Me</b></h4>
-      <p>Do you want me to photograph you? Fill out the form and fill me in with the details :) I love meeting new people!</p>
+      <p>Do you also like coffee, coding and or running?? If so, feel free to contact me!</p>
       <form action="/action_page.php" target="_blank">
         <div class="w3-section">
           <label>Name</label>
@@ -139,11 +139,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-row-padding">
       <div class="w3-third">
         <h3>INFO</h3>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>      
+        <p>Current student at Nebraska Wesleyan University searching for an internship. I am in dire need of mula and coffee.</p>      
       </div>
     
       <div class="w3-third">
-        <h3>BLOG POSTS</h3>
+        <h3>Stuff</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
             <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
