--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="/images/BW.jpg" alt="Joe" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="images/BW.JPG" alt="Joe" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Joe Frazier</h4>
       <p>Nebraska Wesleyan University Physics 2019. Physics Club President, Track and Field, Cross country, Cycling Coffee
