--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ img {vertical-align: middle;}
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 5.0s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 5.0s;
 }
 
 @-webkit-keyframes fade {
@@ -124,25 +124,25 @@ img {vertical-align: middle;}
 <body>
 
 <h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
+<p>Change image every 10 seconds:</p>
 
 <div class="slideshow-container">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <img src="images/BW.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
+  <img src="images/Shoes.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="images/Start.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -173,7 +173,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+  setTimeout(showSlides, 10000);//Change image every 2 seconds
 }
 </script>
     <img src="images/BW.JPG" alt="ME" class="w3-image w3-padding-32" width="600" height="650">
