--- a/index.html
+++ b/index.html
@@ -122,27 +122,29 @@ img {vertical-align: middle;}
 </style>
 </head>
 <body>
-
-<h2>Automatic Slideshow</h2>
-<p>Change image every 10 seconds:</p>
-
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="images/BW.JPG" style="width:100%">
+  <div class="numbertext">1 / 4</div>
+  <img src="images/Shoes.JPG" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="images/Shoes.JPG" style="width:100%">
+  <div class="numbertext">2 / 4</div>
+  <img src="images/BW.JPG" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
+  <div class="numbertext">3 / 4</div>
   <img src="images/START.JPG" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+  
+<div class="mySlides fade">
+  <div class="numbertext">4 / 4</div>
+  <img src="images/RUN.JPG" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -153,6 +155,7 @@ img {vertical-align: middle;}
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
+  <span class="dot"></span>
 </div>
 
 <script>
@@ -173,7 +176,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 10000);//Change image every 2 seconds
+  setTimeout(showSlides, 10000);//Change image every 10 seconds
 }
 </script>
     <img src="images/BW.JPG" alt="ME" class="w3-image w3-padding-32" width="600" height="650">
