--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 4</div>
+ 
   <img src="images/BW.JPG" style="width:100%">
 
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 4</div>
+  
   <img src="images/Shoes.JPG" style="width:100%">
   
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 4</div>
+  
   <img src="images/START.JPG" style="width:100%">
   
 </div>
   
 <div class="mySlides fade">
-  <div class="numbertext">4 / 4</div>
+  
   <img src="images/RUN.JPG" style="width:100%">
   
 </div>
@@ -179,14 +179,16 @@ function showSlides() {
   setTimeout(showSlides, 10000);//Change image every 10 seconds
 }
 </script>
-    <img src="images/BW.JPG" alt="ME" class="w3-image w3-padding-32" width="600" height="650">
+  
     <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>Joe Frazier</h4>
-      <p>Nebraska Wesleyan University Physics 2019. Physics Club President, Track and Field, Cross country, Cycling Coffee
+      <h3>Nebraska Wesleyan University Physics 2019 
+      </h3>
+        
+      <p>Physics Club President, Track and Field, Cross country, Cycling and Coffee
       </p>
-      <p>
-        Washington University Stl. Computer Science 2020
-      </p>
+      <h3>
+        Washington University in Saint Louis Computer Science 2021
+      </h3>
       <p>mail: jfrazie3@nebrwesleyan.edu</p>
       <p>tel: (402)-699-9153</p>
       <hr class="w3-opacity">
