--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function showSlides() {
   
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-    <h2>ABOUT
+    <h2>ABOUT ME
     </h2>
     
     
