--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@ function showSlides() {
       <div class="w3-white">
         <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
       </div>
-      <a href="Joe_Frazier_Resume.pdf" target="_blank"> RESUME</a> 
-      <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+      
+      <a href="Joe_Frazier_Resume.pdf" target="_blank"> <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+      </a>
       <hr class="w3-opacity">
       </div>
     </div>
