--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ function showSlides() {
     </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">THANKS FOR STOPPING BY</div>
+  <div class="w3-black w3-center w3-padding-24">Thanks for stopping by</div>
 
 <!-- End page content -->
 </div>
