--- a/index.html
+++ b/index.html
@@ -244,23 +244,16 @@ function showSlides() {
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-grey">  
     <div class="w3-row-padding">
-      <div class="w3-third">
-        <h3>INFO</h3>
-        <p>Current student at Nebraska Wesleyan University searching for an internship. I am in dire need of mula and coffee.</p>      
+      <div class="w3-third">     
       </div>
     
       <div class="w3-third">
-        <h3>Stuff</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Lorem</span><br>
-            <span>Sed mattis nunc</span>
+            <img src="images/RED.JPG" class="w3-left w3-margin-right" style="width:50px">
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Ipsum</span><br>
-            <span>Praes tinci sed</span>
+            <img src="images/flag.JPG" class="w3-left w3-margin-right" style="width:50px">
           </li> 
         </ul>
       </div>
