--- a/index.html
+++ b/index.html
@@ -243,7 +243,26 @@ function showSlides() {
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-grey">  
-      
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}  
     <img src="images/flag.jpg" class="w3-center w3-margin-center" style="width:100px">
            
    
