--- a/htmlnotes.html
+++ b/htmlnotes.html
@@ -52,7 +52,7 @@
     Links created using the (a href="https://www.website.com") tag.
   </a>
   
-  <img src="BW.JPG" alt="Pic of me in black and white" width="100" height="100">
+  <img src="images/BW.JPG" alt="Pic of me in black and white" width="100" height="100">
   <p> 
     Images like the one above can be inserted using the (img src="file.filetype" alt="Description of picture" 
     width="width in pixels" height="height in pixels") tag. These extra parameters are known as attributes.
