--- a/htmlnotes.html
+++ b/htmlnotes.html
@@ -51,7 +51,7 @@
   <a href="https://www.tfrrs.org"> 
     Links created using the (a href="https://www.website.com") tag.
   </a>
-  <p></p>
+  <br>
   
   <img src="images/BW.JPG" alt="Pic of me in black and white" width="100" height="100">
   <p> 
@@ -77,5 +77,12 @@
     <li> second place</li>
     <li> third place</li>
    </ol>
+  
+  <!------------------------ Elements ---------------->
+  <h3> Elements </h3>
+  <p> 
+    An element consists of the start tag, content and end tag 
+  </p>
+  
 
 </html>
