--- a/htmlnotes.html
+++ b/htmlnotes.html
@@ -83,6 +83,28 @@
   <p> 
     An element consists of the start tag, content and end tag 
   </p>
+  <p>
+    Many elements are "nested" meaning they are contained inside other elements. Some exmples are the html element that contains the body
+    or the paragraph elements which are the content of the body. Remember to include the end tag or your element may not function correctly.
+  </p>
+  <p>
+    An empty element, such as the line break (br), contain no content.
+  </p>
+  
+  
+  <!------------------------Attributes----------------->
+  <h2> Attributes</h2>
+  <p> 
+    Attributes provide additional information to the browser about the HTML elements.
+  </p>
+  
+  <ul>
+    <li> All HTML elemnts can have attributes</li>
+    <li> Attributes provide additional information about an element</li>
+    <li> Attributes are specified in the start tag</li>
+    <li> Attributes come in
+  
+    
   
 
 </html>
