--- a/htmlnotes.html
+++ b/htmlnotes.html
@@ -33,15 +33,15 @@
   
   
       <!--------------------Tags------------------->
-  <h3>
+  <h2>
     Tags
-  </h3>
+  </h2>
   <p> 
     Tags are used to tell the browser how to display an item, such as text, images or links
   </p>
   
   <h5>
-    Headings like this define large text. They have the (h#) tag, and the number can range from 1 to 6 to change the size of the text.
+    Headings like this define large/bold text. They have the (h#) tag, and the number can range from 1 to 6 to change the size of the text.
   </h5>
   
   <p>
@@ -102,7 +102,24 @@
     <li> All HTML elemnts can have attributes</li>
     <li> Attributes provide additional information about an element</li>
     <li> Attributes are specified in the start tag</li>
-    <li> Attributes come in
+    <li> Attributes are accessed using name-value pairs in the form (name="value") </li>
+  </ul>
+  
+  <p> 
+    Some useful attributes include
+  </p>
+  <ul>
+    <li> href Attribute- used to define links in the (a) tag. (a href="httpl://www.website.com") Some text (/a) </li>
+    <li> src Attribute- used to define the image source in the (img) tag. (img src="pic.jpg") </li>
+    <li> Width and Height Attributes- used to set the size of images in the (img) tag. (img src... width="# of pixels" height="# of pixels")</li>
+    <li> alt Attribute- defines text to be used as an alternative to the picture in the (img) tag. (img src... alt="Description of picture") </li>
+    <li style="color:blue"> style Attribute- defines the styling of an element. (p style="color:red") </li>
+    <li> lang Attribute- declares a language in the (html) tag. (html lang="en-US") </li>
+    <li title="title Attribute-This is known as a tooltip"> title Attribute- displays a value as a tooltip (p title="test")</li>
+  </ul>
+  <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
+  
+    
   
     
   
