--- a/htmlnotes.html
+++ b/htmlnotes.html
@@ -117,6 +117,7 @@
     <li> lang Attribute- declares a language in the (html) tag. (html lang="en-US") </li>
     <li title="title Attribute-This is known as a tooltip"> title Attribute- displays a value as a tooltip (p title="test")</li>
   </ul>
+  <a href="https://www.w3schools.com/tags/ref_attributes.asp">For a complete list of attributes click this link.</a>
   <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
   
     
