--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -11,7 +11,8 @@
 <!------------------------------ BODY ------------------------------------------------------->
 
 <body> 
-  <h2> Welcome to my notes! *h2*
+  <h2> Welcome to my HTML Tutorial! This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
+    <a href="www.w3schools.com/html">w3's html tutorial</a> <br>For the best learning experience, dowload the HTML file corresponding to each section to view both the browser and HTML at the same time!
   </h2>
 
   <p>
