--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -11,9 +11,10 @@
 <!------------------------------ BODY ------------------------------------------------------->
 
 <body> 
-  <h2> Welcome to my HTML Tutorial! This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
+  <h2> Welcome to my HTML Tutorial!<br> </h2>
+  <h3>This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
     <a href="www.w3schools.com/html">w3's html tutorial</a> <br>For the best learning experience, dowload the HTML file corresponding to each section to view both the browser and HTML at the same time!
-  </h2>
+  </h3>
 
   <p>
     The body contains all of the visible page content. This section is enclosed in a paragraph tag. *p*
