--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -14,7 +14,8 @@
   <h2> Welcome to my HTML Tutorial!<br> </h2>
   <h3>This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
     <a href="www.w3schools.com/html">W3 Schools's html tutorial</a> <br>For the best learning experience, dowload the HTML file corresponding to each section to view both the browser and HTML at the same time!
-  </h3> <p> One is not sufficient without the other </p>
+    <p> One is not sufficient without the other </p>
+  </h3> 
 
   <p>
     The body contains all of the visible page content. This section is enclosed in a paragraph tag. *p*
