--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -4,7 +4,7 @@
 <!------------------------------- Head------------------------------------------------------->
 
 <head> <!-- Defines the head of the page or the Meta information for the document-->
-  <title> HTML Notes </title> <!-- Gives the page a title-->
+  <title> HTML Tutorial Intro </title> <!-- Gives the page a title-->
 </head>
 
 
