--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="Joe_Frazier_Resume.pdf" target="_blank"> RESUME</a> 
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
   <a href="pages/htmlnotes.html"> HTML Notes </a>
+  <a href="pages/headings.html"> Headings </a>
 </nav>
 
 <!-- Top menu on small screens -->
