--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -123,7 +123,7 @@
   <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
   
     
-  <a href="headings.html> Headings </a>
+  <a href="pages/headings.html> Headings </a>
     
   
 
