--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -122,9 +122,10 @@
   <a href="https://www.w3schools.com/tags/ref_attributes.asp">For a complete list of attributes click this link.</a>
   <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
   
-    
-  <a href="pages/headings.html> Headings </a>
-    
+  <button> 
+    Button  
+    <a href="pages/headings.html> Headings </a>
+   </button>
   
 
 </html>
