--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -123,8 +123,8 @@
   <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
   
   <button> 
-    Button  
-    <a href="pages/headings.html> Headings </a>
+    Button 
+    <a href="pages/headings.html"> Headings </a>
    </button>
   
 
