--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -5,7 +5,7 @@
 
 <head> <!-- Defines the head of the page or the Meta information for the document-->
   <title> HTML Tutorial Intro </title> <!-- Gives the page a title-->
-  <h3><a href="index.html"> HOME</a></h3>
+  <h3><a href="https://www.jfrazier.ml"> HOME</a></h3>
 </head>
 
 
