--- a/pages/headings.html
+++ b/pages/headings.html
@@ -2,7 +2,7 @@
 <html>
 
 <head> 
-  <title> Headings </title>
+  <title> Headings and Paragraphs </title>
 </head>
 
 <body>
@@ -21,6 +21,19 @@
 <p> 
   Horizontal rules (hr), shown above, creates a break in the HTML page with a line
 </p>
+  
+<!--------------Paragraphs------------>  
+<h2> Paragraphs </h2>
+  <p>
+    Browsers do not display extra           spaces                 like in this source    code.
+  </p>
+  <p> 
+    Remember, to create a line break like this <br> use the (br) tag!
+  </p>
+  <pre>
+    If you would like   to have   extra spaces and 
+    new lines from the source code displayed, use the (pre) tag.
+  </pre>
 
 
 </body>
