--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
   <ul><h4>HTML Tutorial </h4>
     <li><a href="pages/htmlnotes.html"> HTML Intro </a> </li>
-    <li><a href="pages/headings.html"> Headings </a> </li>
-    </ul>
+    <li><a href="pages/headings.html"> Headings and Paragraphs </a> </li>
+    <li><a href="pages/styles.html">Styles and Formatting </a> </li>
+  </ul>
 </nav>
 
 <!-- Top menu on small screens -->
