--- a/pages/styles.html
+++ b/pages/styles.html
@@ -2,11 +2,14 @@
 
 <html>
 <head>
-  <title> Styles </title>
+  <title> Styles and Formatting</title>
 </head>
 
 <body style="background-color:lightblue;">
 
+  
+<!--------------Styles---------------->
+  
 <h2> Styles </h2>
 <p> To style an element, use the style attribute. </p>
 <ul> <h4> Some things you can do with the style attribute include: </h4>
@@ -17,6 +20,34 @@
   <li style="text-align:center;"> Text align- defines where the content of an element will appear in the horizontal plane. (tag style="text-align:position;") </li>
   
 </ul>
+  
+  
+  
+<!----------------Formatting----------------->  
+<h2> Formatting </h2>
+<p> 
+  To format content, use special elements to define how the content is displayed. To do this simply place the start and end tags of the special elements around the content you want to <b>format</b>.
+</p>
+<ul> <h4> These special elements include:
+  <li><b>Bold</b> text using the (b) tags. This text is bold but has no extra importance.</li>
+  <li><strong>Strong</strong> text using the (strong) tags. This text is bolded and has importance.</li>
+  <li><i>Italic</i> text using the (i) tags. This text is italic with no extra importance.</li>
+  <li><em>Emphasized</em> text using the (em) tags. This text is italics with extra importance. </li>
+  <li><mark>Marked</mark> text using the (mark) tags. This text is highlighted</li>
+  <li><small>Small</small> text using the (small) tags. This text appears small. </li>
+  <li><del>Deleted</del> Deleted text using the (del) tags. This text has a line through it.</li>
+  <li><ins> Inserted</ins> text using the (ins) tags. This text has a line below it. </li>
+  <li><sub>Subscript</sub> text using the (sub) tags </li>
+  <li><sup>Superscript</sup> text using the (sup) tags </li>
+  <li> <a href="https://www.w3schools.com/tags/default.asp"> Click here for a full list of element tags</a> </li>
+</ul>  
+    
+  
+  
+  
+  
+  
+  
   
 </body>
 </html>  
