--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -124,7 +124,7 @@
   <p> For best compatability, use lowercase attributes and double quotes around attribute values (single quotes work but should be reserved for a quote inside the sttribute value)</p>
   
   <button> 
-    <a href="pages/headings.html"> Headings </a>
+    <a href="headings.html"> Headings </a>
    </button>
   
 
