--- a/pages/headings.html
+++ b/pages/headings.html
@@ -35,6 +35,9 @@
     new lines from the source code displayed, use the (pre) tag.
   </pre>
 
+<button>
+  <a href="styles.html">Styles</a>
+  </button>
 
 </body>
 </html>
