--- a/pages/styles.html
+++ b/pages/styles.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-  <h2> <a href="https://www.jfrazier.ml"> HOME</a>
   <title> Styles and Formatting</title>
+  <h3><a href="https://www.jfrazier.ml"> HOME</a></h3>
 </head>
 
 <body style="background-color:lightblue;">
