--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <li><a href="pages/htmlnotes.html"> HTML Intro </a> </li>
     <li><a href="pages/headings.html"> Headings and Paragraphs </a> </li>
     <li><a href="pages/styles.html">Styles and Formatting </a> </li>
+    <li><a href='pages/running.html">Running</a></li>
   </ul>
 </nav>
 
