--- a/pages/running.html
+++ b/pages/running.html
@@ -6,5 +6,5 @@
 
 
 <body>
-  <a href="https://www.athletic.net.com"> Hi</a>
+  <a href="https://www.tfrrs.org/athletes/6481234/Nebraska_Wesleyan/Joe_Frazier.html"> TFRRS</a>
  </body
