--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a> 
   <a href="Joe_Frazier_Resume.pdf" target="_blank"> RESUME</a> 
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="pages/running.html">Running</a>
   <ul><h4>HTML Tutorial </h4>
     <li><a href="pages/htmlnotes.html"> HTML Intro </a> </li>
     <li><a href="pages/headings.html"> Headings and Paragraphs </a> </li>
     <li><a href="pages/styles.html">Styles and Formatting </a> </li>
-    <li><a href="pages/running.html">Running</a></li>
+    <li> Quotations and Comments </li>
+    <li> Colors and CSS </li>
+    <li> Images </li>
+    
   </ul>
 </nav>
 
