--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <ul><h4>HTML Tutorial </h4>
     <li><a href="pages/htmlnotes.html"> HTML Intro </a> </li>
     <li><a href="pages/headings.html"> Headings and Paragraphs </a> </li>
-    <li><a href="pages/styles.html">Styles and Formatting </a> </li>
+    <li><a href="pages/styles.html">Styles, Formatting, Quotations, Citations and Comments</a> </li>
     <li> Quotations and Comments </li>
     <li> Colors and CSS </li>
     <li> Images </li>
