--- a/pages/styles.html
+++ b/pages/styles.html
@@ -43,6 +43,10 @@
   <li> <a href="https://www.w3schools.com/tags/default.asp"> Click here for a full list of element tags</a> </li>
 </ul>  
     
+  <!--------------------Quotation and Citations Elements---------------->
+  <h2> Quotations and Citations</h2>
+  <p> Short quotations can be defined using the (q) tag. Browsers usually insert quotation marks around this element. <p>
+  <q>You cannot handle my undivided attention<q>
   
   
   
