--- a/pages/styles.html
+++ b/pages/styles.html
@@ -46,7 +46,10 @@
   <!--------------------Quotation and Citations Elements---------------->
   <h2> Quotations and Citations</h2>
   <p> Short quotations can be defined using the (q) tag. Browsers usually insert quotation marks around this element. <p>
-  <q>You cannot handle my undivided attention<q>
+  <q>You cannot handle my undivided attention<q> Dwight
+  
+  <p> The (blockquote) tag defines an element that is quoted from another source. Browsers usually indent these elements. The blockquote tag has an attribute called
+    cite that can be used to cite a source using the format, cite="https://www.website.com"
   
   
   
