--- a/pages/styles.html
+++ b/pages/styles.html
@@ -46,10 +46,11 @@
   <!--------------------Quotation and Citations Elements---------------->
   <h2> Quotations and Citations</h2>
   <p> Short quotations can be defined using the (q) tag. Browsers usually insert quotation marks around this element. <p>
-  <q>You cannot handle my undivided attention<q> Dwight
+  <q>You cannot handle my undivided attention</q> 
   
   <p> The (blockquote) tag defines an element that is quoted from another source. Browsers usually indent these elements. The blockquote tag has an attribute called
     cite that can be used to cite a source using the format, cite="https://www.website.com"
+  <blockquote cite="http://www.officequotes.net/no8-02.php">Me mechanic not speak English. But he know what me mean when me say “car no go”, and we best friends. So me think: why waste time, say lot word when few word do trick?</blockquote>
   
   
   
