--- a/pages/styles.html
+++ b/pages/styles.html
@@ -52,6 +52,7 @@
     cite that can be used to cite a source using the format, cite="https://www.website.com"
   <blockquote cite="http://www.officequotes.net/no8-02.php">Me mechanic not speak English. But he know what me mean when me say “car no go”, and we best friends. So me think: why waste time, say lot word when few word do trick?</blockquote>
   
+  <p> Abbreviations or acronyms can be defined using the (abbr) tag and a title . The <abbr title= United States Track and Field and Cross Country Coaches Associaction">USTFCCCA</abbr></p>
   
   
   
