--- a/pages/styles.html
+++ b/pages/styles.html
@@ -54,7 +54,12 @@
   
   <p> Abbreviations or acronyms can be defined using the (abbr) tag and a title . The <abbr title= United States Track and Field and Cross Country Coaches Associaction">USTFCCCA</abbr></p>
   
-  
+  <p> The (address) tag can be used to define contact information. Browsers usually display this in itallics and will add a line break after the element.</p>
+  <address> 
+    Created by Joe Frazier <br>
+    Visit my site at: <a href="https://www.jfrazier.ml">jfrazier.ml</a> <br>
+    USA
+    </address>
   
   
   
