--- a/pages/styles.html
+++ b/pages/styles.html
@@ -52,7 +52,7 @@
     cite that can be used to cite a source using the format, cite="https://www.website.com"
   <blockquote cite="http://www.officequotes.net/no8-02.php">Me mechanic not speak English. But he know what me mean when me say “car no go”, and we best friends. So me think: why waste time, say lot word when few word do trick?</blockquote>
   
-  <p> Abbreviations or acronyms can be defined using the (abbr) tag and a title . The <abbr title="United States Track and Field and Cross Country Coaches Associaction">USTFCCCA</abbr></p>
+  <p> Abbreviations or acronyms can be defined using the (abbr) tag and a title . The <abbr title="United States Track and Field and Cross Country Coaches Associaction">USTFCCCA</abbr> is a mouthful.</p> 
   
   <p> The (address) tag can be used to define contact information. Browsers usually display this in itallics and will add a line break after the element.</p>
   <address> 
@@ -61,6 +61,10 @@
     USA
     </address>
   
+  <p> The (cite) tag defines the title of a work. <cite>Classical Mechanics</cite> by John R. Taylor, is my favorite textbook. </p>
+  
+  <p> The (bdo) tag does not define body odor, is rather a bi-directional override and can be used to change the direction text is written using the dir="rtl" attribute. </p>
+  <bdo dir="rtl"> The (bdo) tag does not define body odor.</bdo>
   
   
   
