--- a/pages/styles.html
+++ b/pages/styles.html
@@ -66,6 +66,14 @@
   <p> The (bdo) tag does not define body odor, is rather a bi-directional override and can be used to change the direction text is written using the dir="rtl" attribute. </p>
   <bdo dir="rtl"> The (bdo) tag does not define body odor.</bdo>
   
+  <!-------------------Comments----------------------->
+  <h2> Comments </h2>
+  
+  <p> Comments can be created using (!-- Some text --)</p>
+  <p> This text appears only in your source code and can be used to create notes. </p>
+  
+  
+  
   
   
 </body>
