--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <li> Images </li>
     
   </ul>
+  <a href="pages/academic.html">Courses</a>
+    
 </nav>
 
 <!-- Top menu on small screens -->
