--- a/pages/academic.html
+++ b/pages/academic.html
@@ -12,7 +12,7 @@
 
 <h2>Research </h2>
 <li> Constructing and Modeling the Chaotic Double Rod Pendulum </li>
-
+  <a href="research.html">View more </a>
 
 
 
