--- a/pages/academic.html
+++ b/pages/academic.html
@@ -6,16 +6,21 @@
 </head>
 
 <body>
-
-
-
+  <h2> Interests </h2>
+  <p> Applied Mathematics </p>
+  <p> Statistics </p>
+  <p> Mechanics </p>
+  <p> Chaotic Systems </p>
+  <p> Web Development <p>
+  <p> Program Design </p>
+  <p> Data Analytics </p>
 
 <h2>Research </h2>
 <li> Constructing and Modeling the Chaotic Double Rod Pendulum </li>
   <a href="research.html">View more </a>
 
 
-
+ 
 <h2>Course Listing </h2>
 <li> Calculus III </li>
 <li> Writing and Identity </li>
@@ -24,6 +29,11 @@
 <li> Advanced Laboratory</li>
 <li> Mathematical Problem Solving </li>
 <li> Introduction to Modern Physics </li>
+  
+  
+  
+  
+
 
 
 
