--- a/pages/academic.html
+++ b/pages/academic.html
@@ -7,13 +7,13 @@
 
 <body>
   <h2> Interests </h2>
-  <p> Applied Mathematics </p>
-  <p> Statistics </p>
-  <p> Mechanics </p>
-  <p> Chaotic Systems </p>
-  <p> Web Development <p>
-  <p> Program Design </p>
-  <p> Data Analytics </p>
+  <li> Applied Mathematics </li>
+  <li> Statistics </li>
+  <li> Mechanics </li>
+  <li> Chaotic Systems </li>
+  <li> Web Development <li>
+  <li> Program Design </li>
+  <li> Data Analytics </li>
 
 <h2>Research </h2>
 <li> Constructing and Modeling the Chaotic Double Rod Pendulum </li>
