--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -5,7 +5,12 @@
 </head>
 
 <body>
-Some text
+  <h2>CSS (Cascading Style Sheets) </h2>
+  
+  <p>CSS describes how HTML elements should be displayed. </p>
+  
+  
+  
 </body>
 
 </html>
