--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -13,6 +13,11 @@
 
 <body> 
   <h2> Welcome to my HTML Tutorial!<br> </h2>
+  
+  <h3>HTML Histoy</h3>
+  <p> <abbr>Hypertext Markup Language</abbr>HTML </p>
+  
+  
   <h3>This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
     <a href="https://www.w3schools.com/html">W3 Schools's html tutorial</a> <br>For the best learning experience, dowload the HTML file corresponding to each section to view both the browser and HTML at the same time!
   </h3> 
