--- a/pages/htmlnotes.html
+++ b/pages/htmlnotes.html
@@ -15,7 +15,10 @@
   <h2> Welcome to my HTML Tutorial!<br> </h2>
   
   <h3>HTML Histoy</h3>
-  <p> <abbr>Hypertext Markup Language</abbr>HTML </p>
+  <p> <abbr "Hypertext Markup Language">HTML</abbr> is the markup language used to create webpages. </p>
+  <p> Web browsers recieve HTML documents from storage, whether that be a local storage or web server, and renders them into web pages.</p>
+  
+  
   
   
   <h3>This tutorial is composed mostly of my personal notes as I attempt to learn HTML using 
