--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <li><a href="pages/headings.html"> Headings and Paragraphs </a> </li>
     <li><a href="pages/styles.html">Styles, Formatting, Quotations, Citations and Comments</a> </li>
     <li><a href="pages/CSS.html">CSS and Colors</a> </li>
-    <li> Images </li>
+    <!-- <li> Images </li> -->
     
   </ul>
-  <a href="pages/academic.html">Courses</a>
+  <!-- <a href="pages/academic.html">Courses</a> -->
     
 </nav>
 
