--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ function showSlides() {
     </div>
   </div>
 
-  <!-- Contact section -->
+  <!-- Contact section 
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
     <div class="w3-content" style="max-width:600px">
       <h4 class="w3-center"><b>Contact Me</b></h4>
@@ -244,13 +244,13 @@ function showSlides() {
         <button type="submit" class="w3-button w3-block w3-black w3-margin-bottom">Send Message</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-grey">  
 
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
+
     
    
     <img src="images/flag.jpg" class="w3-center w3-margin-center" style="width:100px">
