--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function showSlides() {
       <p>mail: jfrazie3@nebrwesleyan.edu</p>
       <p>tel: (402)-699-9153</p>
       <hr class="w3-opacity">
-      <!- <h4 class="w3-padding-16">Technical Skills</h4>
+      <!-- <h4 class="w3-padding-16">Technical Skills</h4>
       <p class="w3-wide">Python</p>
       
       <p class="w3-wide">Java</p>
