--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <title><a href="images/NWU.JPG"> </a> Joe Frazier <a href="images/Washu.jpg></a></title>
+  <title><img src="images/NWU.JPG" style="width:100%"> Joe Frazier <img src="images/Washu.JPG" style="width:100%"></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
