--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@ function showSlides() {
 
     
    <div class="center">
-    <img src="images/flag.jpg" class="w3-center w3-margin-center" style="width:100px">
-    <img src="images/CO.JPG" class="w3-center w3-margin-center" style="width:100px">
-    <img src="images/RED.JPG" class="w3-center w3-margin-center" style="width:100px">
-    <img src="images/STAND.JPG" class="w3-center w3-margin-center" style="width:100px">
+    <img src="images/flag.jpg" class="center" style="width:100px">
+    <img src="images/CO.JPG" class="center" style="width:100px">
+    <img src="images/RED.JPG" class="center" style="width:100px">
+    <img src="images/STAND.JPG" class="center" style="width:100px">
     </div>      
    
     
