--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@ function showSlides() {
     <div class="w3-content w3-justify" style="max-width:600px">
       <h3>Nebraska Wesleyan University Physics 2019 
       </h3>
-      <img src="images/NWU.JPG" class="center" style="width:25%>
+      <img src="images/NWU.JPG" class="center" style="width:25%">
         
       <p>Physics Club President, Track and Field, Cross country, Cycling and Coffee
       </p>
       <h3>
         Washington University in Saint Louis Computer Science 2021
       </h3>
-        <img src="images/Washu.JPG" class="center" style="width:25%>
+        <img src="images/Washu.JPG" class="center" style="width:25%">
       <p>mail: jfrazie3@nebrwesleyan.edu</p>
       <p>tel: (402)-699-9153</p>
       <hr class="w3-opacity">
