--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@ function showSlides() {
       <h3>Nebraska Wesleyan University Physics 2019 
       </h3>
       <img src="images/NWU.jpg" class="center" style="width:25%">
-        
-      <p>Physics Club President, Track and Field, Cross country, Cycling and Coffee
-      </p>
+      <ul> 
+      <li>Physics Club President, Track and Field, Cross country, Cycling and Coffee
+      </li>
+      </ul>
       <h3>
         Washington University in Saint Louis Computer Science 2021
       </h3>
