--- a/index.html
+++ b/index.html
@@ -203,13 +203,23 @@ function showSlides() {
       </h3>
       <img src="images/NWU.jpg" class="center" style="width:25%">
       <ul> 
-      <li>Physics Club President, Track and Field, Cross country, Cycling and Coffee
-      </li>
+      <li>Physics Club President, Track and Field, Cross Country
+        </li>
       </ul>
       <h3>
         Washington University in Saint Louis Computer Science 2021
       </h3>
         <img src="images/Washu.jpg" class="center" style="width:25%">
+      <h3>
+        Extracurricular Interests
+      </h3>
+      <ul>
+        <li>Running </li>
+        <li>Cycling </li>
+        <li>Coffee </li>
+        <li>Reading </li>
+        
+      </ul>
       <p>mail: jfrazie3@nebrwesleyan.edu</p>
       <p>tel: (402)-699-9153</p>
       <hr class="w3-opacity">
