--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
   <h3 class="w3-padding-64 w3-center"><b>Joe<br>Frazier</b></h3>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a> 
-  <a href="Joe_Frazier_Resume.pdf" target="_blank"> RESUME</a> 
+  <a href="WebResume.pdf" target="_blank"> RESUME</a> 
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
   <a href="pages/running.html">Running</a>
   <!-- <a href="pages/library.html">My Library</a> -->
@@ -231,7 +231,7 @@ function showSlides() {
       <p class="w3-wide">JavaScript, HTML, CSS</p> -->
       
       
-      <a href="Joe_Frazier_Resume.pdf" target="_blank"> <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+      <a href="WebResume.pdf" target="_blank"> <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
       </a>
       <hr class="w3-opacity">
       </div>
