--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Sidebar/menu -->
 <!--<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
 <!-- <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>-->
- <nav class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"><br>
+ <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center w3-overlay w3-animate-opacity" onclick="w3_close()" style="z-index:3;width:300px;font-weight:bold" id="mySidebar" title="close side menu" ><br>
   <h3 class="w3-padding-64 w3-center"><b>Joe<br>Frazier</b></h3>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a> 
   <a href="WebResume.pdf" target="_blank"> RESUME</a> 
