--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ function showSlides() {
 
 <!-- Add font awesome icons -->
 
-    <a href="WebResume.pdf" target="_blank"> <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+    <a href="WebResume.pdf" target="_blank"> <button class="center w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
       </a>
       
    
