--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@ function showSlides() {
 
 <!-- Add font awesome icons -->
 
-    <a href="WebResume.pdf" target="_blank"> <button class="center w3-button w3-light-grey width:100px height:25px">Download Resume</button></p>
+    <a href="WebResume.pdf" target="_blank"> <button class="center  width:100px height:25px">Download Resume</button></p>
       </a>
+  
       
    
     
